--- a/assets/package.json
+++ b/assets/package.json
@@ -6,8 +6,10 @@
     "@types/react-dom": "^18.0.6",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view",
     "phoenix_live_react": "file:../deps/phoenix_live_react",
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "pikaso": "^2.7.3",
+    "pikaso-react-hook": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
